After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664815 - opusenc: Fixing "Unused var" compiling error for opus codec
opusenc: Fixing "Unused var" compiling error for opus codec
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 0.10.23
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-25 15:27 UTC by Danilo Cesar
Modified: 2011-11-25 15:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.48 KB, patch)
2011-11-25 15:27 UTC, Danilo Cesar
committed Details | Review

Description Danilo Cesar 2011-11-25 15:27:27 UTC
Created attachment 202134 [details] [review]
patch

Default build is failing on opus encoder...

Fix is attached.
Comment 1 Vincent Penquerc'h 2011-11-25 15:36:11 UTC
Pushed, thanks.

commit 43190ea0f8537c437aaf291f7ade2cfc4241a440
Author: Danilo Cesar Lemes de Paula <danilo.cesar@collabora.co.uk>
Date:   Fri Nov 25 11:41:19 2011 -0200

    opusenc: Fixing "Unused var" compiling error for opus codec
    
    https://bugzilla.gnome.org/show_bug.cgi?id=664815