opusenc: Fixing "Unused var" compiling error for opus codec

https://bugzilla.gnome.org/show_bug.cgi?id=664815